--- a/.hound.yml
+++ b/.hound.yml
@@ -2,4 +2,7 @@ Style/LineLength:
   Description: 'Limit lines to 130 characters.'
   Max: 130
 
+java_script:
+  enabled: true
+
 ShowCopNames: true
