--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -8,6 +8,7 @@
 #  description :string(255)
 #  created_at  :datetime
 #  updated_at  :datetime
+#  image       :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
