--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -9,6 +9,7 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  image       :string(255)
+#  asin        :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
