fixed amazon scraping to use asin rather than isbn, and kindle pages rather than paperback

--- a/db/seeds.yml
+++ b/db/seeds.yml
@@ -2,22 +2,29 @@
 
 books:
   - name: '1984'
-    description: 'Meet Big Brother'
+    asin: 'B003JTHWKU'
   - name: 'A Brief History of Time'
-    description: 'Explore the Universe'
+    asin: 'B004WY3D0O'
   - name: 'Alice in Wonderland'
-    description: 'Go down the rabbit hole'
+    asin: 'B008LMD6SM'
   - name: 'Beloved'
     description: 'The ghosts of slavery'
+    asin: 'B000TWUTYG'
   - name: 'Catch-22'
     description: 'Launched its own catchphrase'
+    asin: 'B0048WQDIE'
   - name: 'The Great Gatsby'
     description: 'The rich are different..'
+    asin: 'B000FC0PDA'
   - name: 'The Phantom Tollbooth'
     description: 'An odd and original journey'
+    asin: 'B004IK8Q90'
   - name: 'Great Expectations'
     description: 'Dickens best novel'
+    asin: 'B0082SWC30'
   - name: 'Fahrenheit 451'
     description: 'It was a pleasure to burn'
+    asin: 'B0064CPN7I'
   - name: 'Charlie and the Chocolate Factory'
     description: 'Vintage Roald Dahl'
+    asin: 'B0093X805W'
