--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_script:
   - cp config/database.travis.yml config/database.yml
   - mysql -e 'create database worldreader_dev;'
 script:
-  - bundle exec rake --trace db:migrate db:seed && bundle exec rspec spec
+  - bundle exec rake --trace db:reset db:seed && bundle exec rspec spec
