--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^0.12.0",
     "react-tools": "^0.12.1",
     "jest-cli": "^0.2.0",
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "underscore": "1.8.3"
   },
   "scripts": {
     "test": "node ./node_modules/jest-cli/bin/jest.js"
